--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,74 +60,219 @@
 }
 
 :root {
-    --background: oklch(1 0 0);
-    --foreground: oklch(0.145 0 0);
-    --card: oklch(1 0 0);
-    --card-foreground: oklch(0.145 0 0);
-    --popover: oklch(1 0 0);
-    --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(0.205 0 0);
-    --primary-foreground: oklch(0.985 0 0);
-    --secondary: oklch(0.97 0 0);
-    --secondary-foreground: oklch(0.205 0 0);
-    --muted: oklch(0.97 0 0);
-    --muted-foreground: oklch(0.556 0 0);
-    --accent: oklch(0.97 0 0);
-    --accent-foreground: oklch(0.205 0 0);
-    --destructive: oklch(0.577 0.245 27.325);
-    --destructive-foreground: oklch(0.577 0.245 27.325);
-    --border: oklch(0.922 0 0);
-    --input: oklch(0.922 0 0);
-    --ring: oklch(0.87 0 0);
-    --chart-1: oklch(0.646 0.222 41.116);
-    --chart-2: oklch(0.6 0.118 184.704);
-    --chart-3: oklch(0.398 0.07 227.392);
-    --chart-4: oklch(0.828 0.189 84.429);
-    --chart-5: oklch(0.769 0.188 70.08);
-    --radius: 0.625rem;
-    --sidebar: oklch(0.985 0 0);
-    --sidebar-foreground: oklch(0.145 0 0);
-    --sidebar-primary: oklch(0.205 0 0);
-    --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.97 0 0);
-    --sidebar-accent-foreground: oklch(0.205 0 0);
-    --sidebar-border: oklch(0.922 0 0);
-    --sidebar-ring: oklch(0.87 0 0);
+
+    --background:
+        oklch(0.9887 0.0040 286.3257);
+    --foreground:
+        oklch(0.1287 0.0040 285.8299);
+    --card:
+        oklch(0.9887 0.0040 286.3257);
+    --card-foreground:
+        oklch(0.1287 0.0040 285.8299);
+    --popover:
+        oklch(0.9887 0.0040 286.3257);
+    --popover-foreground:
+        oklch(0.1287 0.0040 285.8299);
+    --primary:
+        oklch(0.7235 0.1298 298.4515);
+    --primary-foreground:
+        oklch(0.9749 0.0108 286.1972);
+    --secondary:
+        oklch(0.9646 0.0054 286.2977);
+    --secondary-foreground:
+        oklch(0.2570 0.0143 285.3525);
+    --muted:
+        oklch(0.9646 0.0054 286.2977);
+    --muted-foreground:
+        oklch(0.5388 0.0177 285.7895);
+    --accent:
+        oklch(0.9570 0.0070 301.3752);
+    --accent-foreground:
+        oklch(0.6162 0.1825 295.9788);
+    --destructive:
+        oklch(0.6356 0.2082 25.3782);
+    --destructive-foreground:
+        oklch(0.9848 0 0);
+    --border:
+        oklch(0.9109 0.0138 286.1231);
+    --input:
+        oklch(0.9109 0.0138 286.1231);
+    --ring:
+        oklch(0.7235 0.1298 298.4515);
+    --chart-1: oklch(0.6 0.25 25);
+    --chart-2:
+    oklch(0.7235 0.1298 298.4515);
+    --chart-3:
+        oklch(0.7603 0.1696 143.6826);
+    --chart-4:
+        oklch(0.8478 0.1106 83.5300);
+    --chart-5:
+        oklch(0.7240 0.1450 350.0206);
+    --radius:
+        0.5rem;
+    --sidebar:
+        oklch(0.9705 0.0082 293.9086);
+    --sidebar-foreground:
+        oklch(0.2067 0.0100 285.4885);
+    --sidebar-primary:
+        oklch(0.7875 0.0881 299.6587);
+    --sidebar-primary-foreground:
+        oklch(0.9749 0.0108 286.1972);
+    --sidebar-accent:
+        oklch(0.9368 0.0120 293.8256);
+    --sidebar-accent-foreground:
+        oklch(0.4045 0.1584 284.4138);
+    --sidebar-border:
+        oklch(0.8944 0.0167 293.7159);
+    --sidebar-ring:
+        oklch(0.7875 0.0881 299.6587);
+    --font-sans:
+        'Inter', sans-serif;
+    --font-serif:
+        'Lora', serif;
+    --font-mono:
+        'Fira Code', monospace;
+    --shadow-color:
+        0 0 0;
+    --shadow-opacity:
+        0.05;
+    --shadow-blur:
+        0.25rem;
+    --shadow-spread:
+        0;
+    --shadow-offset-x:
+        0;
+    --shadow-offset-y:
+        0.125rem;
+    --letter-spacing:
+        0rem;
+    --spacing:
+        0.25rem;
+    --shadow-2xs:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.03);
+    --shadow-xs:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.03);
+    --shadow-sm:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.05), 0 1px 2px -1px hsl(0 0 0 / 0.05);
+    --shadow:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.05), 0 1px 2px -1px hsl(0 0 0 / 0.05);
+    --shadow-md:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.05), 0 2px 4px -1px hsl(0 0 0 / 0.05);
+    --shadow-lg:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.05), 0 4px 6px -1px hsl(0 0 0 / 0.05);
+    --shadow-xl:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.05), 0 8px 10px -1px hsl(0 0 0 / 0.05);
+    --shadow-2xl:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.13);
+    --tracking-normal:
+        0rem;
 }
 
 .dark {
-    --background: oklch(0.145 0 0);
-    --foreground: oklch(0.985 0 0);
-    --card: oklch(0.145 0 0);
-    --card-foreground: oklch(0.985 0 0);
-    --popover: oklch(0.145 0 0);
-    --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.985 0 0);
-    --primary-foreground: oklch(0.205 0 0);
-    --secondary: oklch(0.269 0 0);
-    --secondary-foreground: oklch(0.985 0 0);
-    --muted: oklch(0.269 0 0);
-    --muted-foreground: oklch(0.708 0 0);
-    --accent: oklch(0.269 0 0);
-    --accent-foreground: oklch(0.985 0 0);
-    --destructive: oklch(0.396 0.141 25.723);
-    --destructive-foreground: oklch(0.637 0.237 25.331);
-    --border: oklch(0.269 0 0);
-    --input: oklch(0.269 0 0);
-    --ring: oklch(0.439 0 0);
-    --chart-1: oklch(0.488 0.243 264.376);
-    --chart-2: oklch(0.696 0.17 162.48);
-    --chart-3: oklch(0.769 0.188 70.08);
-    --chart-4: oklch(0.627 0.265 303.9);
-    --chart-5: oklch(0.645 0.246 16.439);
-    --sidebar: oklch(0.205 0 0);
-    --sidebar-foreground: oklch(0.985 0 0);
-    --sidebar-primary: oklch(0.985 0 0);
-    --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.269 0 0);
-    --sidebar-accent-foreground: oklch(0.985 0 0);
-    --sidebar-border: oklch(0.269 0 0);
-    --sidebar-ring: oklch(0.439 0 0);
+  
+    --background:
+        oklch(0.1641 0.0064 285.6767);
+    --foreground:
+        oklch(0.9557 0.0068 286.2705);
+    --card:
+        oklch(0.1641 0.0064 285.6767);
+    --card-foreground:
+        oklch(0.9557 0.0068 286.2705);
+    --popover:
+        oklch(0.1641 0.0064 285.6767);
+    --popover-foreground:
+        oklch(0.9557 0.0068 286.2705);
+    --primary:
+        oklch(0.5656 0.2064 294.1453);
+    --primary-foreground:
+        oklch(0.9749 0.0108 286.1972);
+    --secondary:
+        oklch(0.2570 0.0143 285.3525);
+    --secondary-foreground:
+        oklch(0.9109 0.0138 286.1231);
+    --muted:
+        oklch(0.2570 0.0143 285.3525);
+    --muted-foreground:
+        oklch(0.7127 0.0128 286.0699);
+    --accent:
+        oklch(0.2893 0.0170 300.5419);
+    --accent-foreground:
+        oklch(0.7235 0.1298 298.4515);
+    --destructive:
+        oklch(0.5714 0.2121 27.2502);
+    --destructive-foreground:
+        oklch(0.9848 0 0);
+    --border:
+        oklch(0.3512 0.0220 285.2107);
+    --input:
+        oklch(0.3512 0.0220 285.2107);
+    --ring:
+        oklch(0.5656 0.2064 294.1453);
+    --chart-1: oklch(0.6 0.25 25);
+    --chart-2:
+    oklch(0.7235 0.1298 298.4515);
+    --chart-3:
+        oklch(0.6312 0.1562 143.4471);
+    --chart-4:
+        oklch(0.7599 0.1351 81.0564);
+    --chart-5:
+        oklch(0.6094 0.1849 353.1217);
+    --sidebar:
+        oklch(0.2038 0.0152 292.6407);
+    --sidebar-foreground:
+        oklch(0.9109 0.0138 286.1231);
+    --sidebar-primary:
+        oklch(0.6417 0.1329 297.9185);
+    --sidebar-primary-foreground:
+        oklch(0.9749 0.0108 286.1972);
+    --sidebar-accent:
+        oklch(0.2876 0.0167 292.9627);
+    --sidebar-accent-foreground:
+        oklch(0.6977 0.0891 291.5541);
+    --sidebar-border:
+        oklch(0.3804 0.0242 292.8528);
+    --sidebar-ring:
+        oklch(0.6417 0.1329 297.9185);
+    --radius:
+        0.5rem;
+    --font-sans:
+        'Inter', sans-serif;
+    --font-serif:
+        'Lora', serif;
+    --font-mono:
+        'Fira Code', monospace;
+    --shadow-color:
+        0 0 0;
+    --shadow-opacity:
+        0.2;
+    --shadow-blur:
+        0.25rem;
+    --shadow-spread:
+        0;
+    --shadow-offset-x:
+        0;
+    --shadow-offset-y:
+        0.125rem;
+    --letter-spacing:
+        0rem;
+    --spacing:
+        0.25rem;
+    --shadow-2xs:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.10);
+    --shadow-xs:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.10);
+    --shadow-sm:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.20), 0 1px 2px -1px hsl(0 0 0 / 0.20);
+    --shadow:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.20), 0 1px 2px -1px hsl(0 0 0 / 0.20);
+    --shadow-md:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.20), 0 2px 4px -1px hsl(0 0 0 / 0.20);
+    --shadow-lg:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.20), 0 4px 6px -1px hsl(0 0 0 / 0.20);
+    --shadow-xl:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.20), 0 8px 10px -1px hsl(0 0 0 / 0.20);
+    --shadow-2xl:
+        0 0.125rem 0.25rem 0 hsl(0 0 0 / 0.50);
 }
 
 @layer base {
@@ -137,5 +282,143 @@
 
     body {
         @apply bg-background text-foreground;
+    letter-spacing:
+        var(--tracking-normal);
+    }
+}
+
+@theme inline {
+    --font-sans:
+        'Inter', sans-serif;
+    --font-mono:
+        'Fira Code', monospace;
+    --font-serif:
+        'Lora', serif;
+    --radius:
+        0.5rem;
+    --tracking-tighter:
+        calc(var(--tracking-normal) - 0.05em);
+    --tracking-tight:
+        calc(var(--tracking-normal) - 0.025em);
+    --tracking-wide:
+        calc(var(--tracking-normal) + 0.025em);
+    --tracking-wider:
+        calc(var(--tracking-normal) + 0.05em);
+    --tracking-widest:
+        calc(var(--tracking-normal) + 0.1em);
+    --tracking-normal:
+        var(--tracking-normal);
+    --shadow-2xl:
+        var(--shadow-2xl);
+    --shadow-xl:
+        var(--shadow-xl);
+    --shadow-lg:
+        var(--shadow-lg);
+    --shadow-md:
+        var(--shadow-md);
+    --shadow:
+        var(--shadow);
+    --shadow-sm:
+        var(--shadow-sm);
+    --shadow-xs:
+        var(--shadow-xs);
+    --shadow-2xs:
+        var(--shadow-2xs);
+    --spacing:
+        var(--spacing);
+    --letter-spacing:
+        var(--letter-spacing);
+    --shadow-offset-y:
+        var(--shadow-offset-y);
+    --shadow-offset-x:
+        var(--shadow-offset-x);
+    --shadow-spread:
+        var(--shadow-spread);
+    --shadow-blur:
+        var(--shadow-blur);
+    --shadow-opacity:
+        var(--shadow-opacity);
+    --shadow-color:
+        var(--shadow-color);
+    --color-sidebar-ring:
+        var(--sidebar-ring);
+    --color-sidebar-border:
+        var(--sidebar-border);
+    --color-sidebar-accent-foreground:
+        var(--sidebar-accent-foreground);
+    --color-sidebar-accent:
+        var(--sidebar-accent);
+    --color-sidebar-primary-foreground:
+        var(--sidebar-primary-foreground);
+    --color-sidebar-primary:
+        var(--sidebar-primary);
+    --color-sidebar-foreground:
+        var(--sidebar-foreground);
+    --color-sidebar:
+        var(--sidebar);
+    --color-chart-5:
+        var(--chart-5);
+    --color-chart-4:
+        var(--chart-4);
+    --color-chart-3:
+        var(--chart-3);
+    --color-chart-2:
+        var(--chart-2);
+    --color-chart-1:
+        var(--chart-1);
+    --color-ring:
+        var(--ring);
+    --color-input:
+        var(--input);
+    --color-border:
+        var(--border);
+    --color-destructive-foreground:
+        var(--destructive-foreground);
+    --color-destructive:
+        var(--destructive);
+    --color-accent-foreground:
+        var(--accent-foreground);
+    --color-accent:
+        var(--accent);
+    --color-muted-foreground:
+        var(--muted-foreground);
+    --color-muted:
+        var(--muted);
+    --color-secondary-foreground:
+        var(--secondary-foreground);
+    --color-secondary:
+        var(--secondary);
+    --color-primary-foreground:
+        var(--primary-foreground);
+    --color-primary:
+        var(--primary);
+    --color-popover-foreground:
+        var(--popover-foreground);
+    --color-popover:
+        var(--popover);
+    --color-card-foreground:
+        var(--card-foreground);
+    --color-card:
+        var(--card);
+    --color-foreground:
+        var(--foreground);
+    --color-background:
+        var(--background);
+    --radius-sm:
+        calc(var(--radius) - 4px);
+    --radius-md:
+        calc(var(--radius) - 2px);
+    --radius-lg:
+        var(--radius);
+    --radius-xl:
+        calc(var(--radius) + 4px);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
     }
 }
